--- a/design.css
+++ b/design.css
@@ -68,6 +68,13 @@ main {
     max-width: 330px;
     text-align: center;
 }
+h1, h2, h3 {
+    color: hsl(210, 10%, 33%);
+}
+p {
+    font-weight: 400;
+    color: hsl(201, 11%, 66%);
+}
 header {
     margin-top: 7rem;
 }
@@ -89,20 +96,147 @@ header > h2 {
     font-weight: 600;
     line-height: 1.2;
     margin-bottom: 1.2rem;
+    margin-top: 8rem;
 }
 header > button:nth-of-type(1) {
     margin-top: 3rem;
     background-color:  hsl(171, 66%, 44%);
+    box-shadow: 0 10px 50px -20px hsl(171, 66%, 44%);
 }
 header > button:nth-of-type(2){
     background-color: hsl(233, 100%, 69%);
+    box-shadow: 0 10px 50px -20px hsl(233, 100%, 69%);
 }
 header > button {
     display: block;
-    margin-top: 1rem;
+    font-family: 'Bai Jamjuree', sans-serif;
+    color: white;
+    margin-top: 1.5rem;
     width: 100%;
-    padding: 1.2rem;
-    font-size: 1rem;
+    padding: 1rem;
+    font-size: 1.2rem;
+    font-weight: 600;
     border-radius: 2rem;
     border: none;
+}
+.first-section {
+    margin-top: 4rem;
+}
+.first-section > img {
+    width: 100%;
+    margin-bottom: 3rem;
+}
+.first-section > h3 {
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.first-section > p {
+    font-size: 1rem;
+    margin-bottom: 3rem;
+    line-height: 1.5;
+}
+.second-section {
+    margin-top: 9rem;
+}
+.second-section > h2 {
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.2;
+    margin-bottom: 1.5rem;
+}
+.second-section > p {
+    line-height: 1.5;
+}
+.second-section > img {
+    width: 100%;
+    margin-top: 3rem;
+    margin-bottom: 4rem;
+}
+.third-section {
+    margin-top: 5rem;
+}
+.third-section > h3 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-top: 2rem;
+    margin-bottom: 1.6rem;
+}
+.third-section > p {
+    line-height: 1.5;
+    margin-bottom: 3.5rem;
+}
+.fourth-section {
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.fourth-section > img {
+    margin-bottom: 4rem;
+}
+.fourth-section > img:nth-of-type(1){
+    width: 40%;
+}
+.fourth-section > img:nth-of-type(2){
+    width: 37%;
+}
+.fourth-section > img:nth-of-type(3){
+    width: 40%;
+}
+.fourth-section > img:nth-of-type(4){
+    width: 37%;
+}
+.fourth-section > img:nth-of-type(5){
+    width: 37%;
+}
+.fifth-section {
+    margin-top: 5rem;
+}
+.fifth-section > h2 {
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.2;
+}
+.fifth-section > p {
+    margin-top: 1.5rem;
+    margin-bottom: 3rem;
+    line-height: 1.5;
+}
+.fifth-section > button {
+    display: block;
+    font-family: 'Bai Jamjuree', sans-serif;
+    color: white;
+    margin-top: 1rem;
+    width: 100%;
+    padding: 1rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    border-radius: 2rem;
+    border: none;
+}
+.fifth-section > button:nth-of-type(1) {
+    background-color:  hsl(171, 66%, 44%);
+    box-shadow: 0 10px 50px -20px hsl(171, 66%, 44%);
+}
+.fifth-section > button:nth-of-type(2){
+    background-color: hsl(233, 100%, 69%);
+    box-shadow: 0 10px 50px -20px hsl(233, 100%, 69%);
+}
+footer {
+    background-color: hsla(201, 11%, 66%, 0.1); 
+    margin-top: 9rem;
+    padding: 3rem 0 4rem;
+}
+footer > img {
+    width: 3rem;
+    margin-bottom: 2rem;
+}
+footer > p {
+    margin-bottom: 2rem;
+}
+.icons {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+    gap: 2.2rem;
 }
