--- a/design.css
+++ b/design.css
@@ -59,14 +59,18 @@ body {
     background-repeat: no-repeat;
     background-position: center top;
     font-family: 'Bai Jamjuree', sans-serif;
+    min-height: 100vh;
+}
+.wrapper {
+    width: 100%;
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    flex-direction: column;
 }
 main {
-    max-width: 330px;
-    text-align: center;
+    max-width: 375px;
 }
 h1, h2, h3 {
     color: hsl(210, 10%, 33%);
@@ -75,8 +79,13 @@ p {
     font-weight: 400;
     color: hsl(201, 11%, 66%);
 }
+button:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
 header {
     margin-top: 7rem;
+    padding: 0 5%;
 }
 header > img {
     margin-bottom: 3rem;
@@ -121,6 +130,7 @@ header > button {
 }
 .first-section {
     margin-top: 4rem;
+    padding: 0 5%;
 }
 .first-section > img {
     width: 100%;
@@ -137,6 +147,7 @@ header > button {
 }
 .second-section {
     margin-top: 9rem;
+    padding: 0 5%;
 }
 .second-section > h2 {
     font-size: 1.8rem;
@@ -154,6 +165,7 @@ header > button {
 }
 .third-section {
     margin-top: 5rem;
+    padding: 0 5%;
 }
 .third-section > h3 {
     font-size: 1.5rem;
@@ -170,6 +182,7 @@ header > button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 5%;
 }
 .fourth-section > img {
     margin-bottom: 4rem;
@@ -191,6 +204,7 @@ header > button {
 }
 .fifth-section {
     margin-top: 5rem;
+    padding: 5%;
 }
 .fifth-section > h2 {
     font-size: 1.8rem;
@@ -223,9 +237,11 @@ header > button {
     box-shadow: 0 10px 50px -20px hsl(233, 100%, 69%);
 }
 footer {
-    background-color: hsla(201, 11%, 66%, 0.1); 
+    background-color: hsla(201, 11%, 66%, 0.1);
     margin-top: 9rem;
     padding: 3rem 0 4rem;
+    text-align: center;
+    width: 100%;
 }
 footer > img {
     width: 3rem;
@@ -234,9 +250,28 @@ footer > img {
 footer > p {
     margin-bottom: 2rem;
 }
+footer > p:hover {
+    cursor: pointer;
+    color: hsl(171, 66%, 44%);
+}
 .icons {
     margin-top: 3rem;
     display: flex;
     justify-content: center;
     gap: 2.2rem;
+}
+.icons > img:hover {
+    cursor: pointer;
+    color: hsl(171, 66%, 44%);
+}
+
+@media screen and (min-width: 376px){
+    body {
+        background-image: url(images/bg-header-desktop.png);
+        background-repeat: no-repeat;
+        background-position: center top;
+    }
+}
+
+@media screen and (min-width: 960px){
 }
