--- a/design.css
+++ b/design.css
@@ -213,7 +213,7 @@ header > .btn > button {
     margin-bottom: 3rem;
     line-height: 1.5;
 }
-.fifth-section > button {
+.fifth-section > .btn > button {
     display: block;
     font-family: 'Bai Jamjuree', sans-serif;
     color: white;
@@ -225,11 +225,11 @@ header > .btn > button {
     border-radius: 2rem;
     border: none;
 }
-.fifth-section > button:nth-of-type(1) {
+.fifth-section > .btn > button:nth-of-type(1) {
     background-color:  hsl(171, 66%, 44%);
     box-shadow: 0 10px 50px -20px hsl(171, 66%, 44%);
 }
-.fifth-section > button:nth-of-type(2){
+.fifth-section > .btn > button:nth-of-type(2){
     background-color: hsl(233, 100%, 69%);
     box-shadow: 0 10px 50px -20px hsl(233, 100%, 69%);
 }
@@ -240,14 +240,15 @@ footer {
     text-align: center;
     width: 100%;
 }
-footer > img {
+.logo > img {
     width: 3rem;
     margin-bottom: 2rem;
 }
-footer > p {
+.content > p {
     margin-bottom: 2rem;
+    color: hsl(210, 10%, 33%);
 }
-footer > p:hover {
+.content > p:hover {
     cursor: pointer;
     color: hsl(171, 66%, 44%);
 }
@@ -294,7 +295,7 @@ footer > p:hover {
         margin-top: 3rem;
     }
     header > .btn > button {
-        width: 20%;
+        width: 15rem;
         margin-top: 0;
         margin-bottom: 0;
     }
@@ -333,6 +334,12 @@ footer > p:hover {
     .part {
         padding: 0 1.6rem;
     }
+    .part:nth-of-type(2) {
+        padding-top: 0.6rem;
+    }
+    .part:nth-of-type(3) {
+        padding-top: 0.6rem;
+    }
     .fourth-section {
         display: flex;
         flex-direction: row;
@@ -341,5 +348,60 @@ footer > p:hover {
     }
     .fourth-section > img {
         width: 15%;
+    }
+    .fifth-section > h2 {
+        font-size: 2.4rem;
+        margin-bottom: 2rem;
+    }
+    .fifth-section > p {
+        font-size: 1.2rem;
+        margin: 0 22%;
+        margin-bottom: 2.5rem;
+    }
+    .fifth-section > .btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        margin-top: 3rem;
+    }
+    .fifth-section > .btn > button {
+        width: 15rem;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .fifth-section > .btn > button:nth-of-type(1) {
+        margin-top: 0;
+    }
+    footer {
+        display: flex;
+        align-items: center;
+        /* justify-content: space-evenly; */
+        justify-content: space-around;
+        padding: 2rem 0;
+    }
+    .left-side {
+        display: flex;
+        align-items: center;
+        gap: 7rem;
+    }
+    .content {
+        display: grid;
+        align-items: center;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 3rem;
+        row-gap: 1rem;
+        text-align: left;
+    }
+    .content > p {
+        margin-bottom: 0;
+    }
+    .logo > img {
+        width: 4rem;
+        margin: 0;
+    }
+    .icons {
+        margin-top: 0;
+        padding: 0;
     }
 }
